--- a/Lab-9_Responsive_Webpage_Beta/index.css
+++ b/Lab-9_Responsive_Webpage_Beta/index.css
@@ -1,6 +1,6 @@
 * { box-sizing: border-box; }
-/* SCREEN SIZE */
 
+/* SCREEN SIZE */
 /* Large screen size 1450px */
 @media only screen and ( max-width: 1450px )
 {
@@ -58,6 +58,7 @@
     width: 40%;
     font-size: 2em;
 }
+
 .navlinks {
     background-color: orange;
     width: 90%;
@@ -72,12 +73,13 @@
     text-decoration: none;
     font-size: 1.2em;
 }
+
 .link:hover {
     background-color: aliceblue;
     color: blue;
 }
 
-
+/* FOOTER */
 .footer {
     width: 100%; box-shadow: 5px 5px 5px lightgray;
     display: flex;
