--- a/Lab-10_UI-Responsive-Webpage-Design/desert_page.css
+++ b/Lab-10_UI-Responsive-Webpage-Design/desert_page.css
@@ -1,51 +1,235 @@
-/* CSS for desert page */
-html { background-color: #F1D4AD; }
+/* @media only screen and ( max-width 1450px )
+{
+    section.card { width: 100%; height: auto; }
+    img.headerimage { height: auto; }
+    img.nvrlnd { height: auto; }
+    img.nvrlnd { height: auto; }
+    img.nvrlnd { height: auto; }
+} */
+
+html { background-color: #F9F9F9; }
 
 .header {
-    width: 1000px;
-    height: 240px;
-    margin: auto;
-    box-shadow: -10px 10px 5px #F1D4BD inset;
+    width: 100%;
+    height: 300px;
+    box-shadow: -10px 10px 5px #F1D4A9 inset;
+    padding: 1em;
+    text-align: center;
+    clear: both;
 }
 
-div.headerimage {
+/*div.headerimage*/
+{
     width: 300px; height: auto; float: left;
 }
 
-.navbar {
-    width: 1000px;
-    margin: auto;
-    color: beige;
+/*.headerimage*/
+{  
+    width: 100%;
+    height: 100%;
+}
+
+/*.headertitle {
+    position: absolute;
+    width: 300px;
+    font-family: "Times";
+    font-size: x-large;
+    font-stretch: normal;
     text-align: center;
-    background-color: #F1D4AD;
+    color: #F1D4A9;
+    float: right;
+}*/
+
+.imgcontainerv2 {
+    width: 100%;
+    height: fill;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    clear: both;
+    border: 10px, 10px, 5px, ridge black;
+}
+
+section.exc8_HeroSection {
+    width: 95%;
+    height: 95%;
+    border: 10px, 10px, 5px, ridge black;
+}
+
+.excImage1 {
+    background-image: url("https://images.adsttc.com/media/images/66f4/b4f0/2684/7b18/b6f9/24c9/large_jpg/zhongwei-desert-diamond-hotel-shuishi_16.jpg?1727313152");
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    position: absolute;
+    width: 97%;
+    height: 95%;
+    display: flex;
+    padding: 1em;
+    border: 10px, 10px, 5px, ridge black;
+}
+
+a.hide_this_csharp {
+    position: absolute;
+}
+
+.text_INFO_1 {
+   position: absolute;
+    top: 5%;
+    bottom: 90%;
+    left: 20%;
+    right: 20;
+    background-color: rgba( 240, 80, 30, 0.7 );
+    text-align: center;
+    border: 10px, 10px, 5px, ridge black;
+    padding: 0.5em;
+}
+
+.nav {
+    width: auto;
+    height: auto;
+    color: aliceblue;
+    padding: 1em;
+    text-align: center;
+    background-color: #F1D4A9;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     border-radius: 1px;
 }
 
-.excImage3 {
-    background-image: linear-gradient( to right, rgba(135,39 ,255, 0.6 ), rgba(25,25,5, 0.6 )), url("http://www.scififantasyhorror.co.uk/wp-content/gallery/sviatoslav-gerasimchuk/the-digital-art-of-sviatoslav-gerasimchuk-5.jpg");
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
-    position: relative;
-    height: 95%;
-    padding: 1em;
-    margin: 1em;
+ul.flexNav
+{
+    background-color: #F1D4A9; text-align: center;
+}
+
+a.flexNav {
+    color: #F9F9F9;
+    text-decoration: none;
+}
+
+a.flexNav:hover {
+    background-color: #C6D7CE;
+    box-shadow: 0px 0px 6px 2px lightgray;
+    transform: scale(.25);
+    font-size: 1.05em;
+    text-decoration: none;
 }
 
 .maincontainer {
     width: 1000px;
-    height: 450px;
     margin: 2em auto;
-    border: 1px black ridge;
-    left: 0;
+    height: 350px;
 }
 
-div.
+.leftblock {
+    width: 295px;
+    height: 300px;
+    float: left;
+}
 
+.introImage
+{
+    width: 100%;
+    height: 100%;
+    padding: .1em;
+    border-radius: 3px;
+    box-shadow: -10px 10px 5px #5E3F9F;
+}
+
+.rightblock {
+    width: 650px;
+    height: 300px;
+    float: right;
+}
+
+.infosection {
+    height: 300px;
+}
+
+.sectionTitle {
+    display: flex;
+    text-align: justify;
+    padding: auto;
+    margin: 3em;
+    justify-content: left;
+    color: #F1D4A9;
+ }
+
+p { text-align: justify; padding: auto; }
+p.msg
+{
+    font-family: "Times"; font-size: large; text-indent: 1em;
+    font-stretch: normal; color: #5E3F9F;
+}
+
+em#parag { justify: top;font-weight: bolder; color: #5E3F9F; font-size: 175%; }
+
+
+.cardscontainer {
+    width: 1000px;
+    height: 300px;
+    margin: 2em auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    clear: both;
+}
+
+p.sectionTitle { display: flex; text-align: left; padding: auto; }
+
+section.card {
+    width: 300px;
+    height: 270px;
+    box-shadow: 1px -1px 1px #5E3F9F;
+    border-radius: 5px;
+    margin: 1em;
+}
+
+div.cardinfo {
+background-color: #F9F9F9;
+padding: 1em;
+height: 95%;
+}
+
+div.cardinfo:hover {
+    background-color: #F1D4A9;
+    box-shadow: 0px 0px 6px 2px black;
+    border-radius: 5px;
+    transform: scale(1.01);
+    font-size: 1.05em;
+    text-decoration: none;
+}
+
+a.cardlink {
+    display: inline-block;
+    background-color: #F9F9F9; color: black;
+    padding: 0.5em; width: 95%; text-align: center;
+    text-decoration: none;
+}
+
+img.nvrlnd {
+    width: 100%;
+    height: 40%;
+    display: block;
+}
+
+h2.linkFont { font: monospace; color: #F1D4A9; }
+
+.images {
+    height:200px;
+    background-color: crimson;
+    float: left;
+    width: 100%;
+}
 
 .footer {
     width: 1000px; margin: 1em auto; box-shadow: 5px 5px 5px lightgray;
-    display: flex; justify-content: space-evenly; padding: 20px; font-size: x-small;
-    text-align: center; height: 250px; background-color: whitesmoke; border-radius: 2px;}
+    display: flex;
+    justify-content: space-evenly;
+    padding: 20px;
+    font-size: x-small;
+    text-align: center; 
+    height: 25px;
+    background-color: whitesmoke;
+    border-radius: 2px;
+}
