--- a/Lab-8/lab8.css
+++ b/Lab-8/lab8.css
@@ -172,7 +172,7 @@ section.exc8_HeroSection {
 }
 
 .excImage1 {
-    background-image: invert(20%), url("https://thumbs.dreamstime.com/b/sci-fi-futuristic-vertical-habitat-forest-lake-generative-ai-illustration-275520333.jpg");
+    background-image: invert(20%), url("https://images.adsttc.com/media/images/66f4/b4f0/2684/7b18/b6f9/24c9/large_jpg/zhongwei-desert-diamond-hotel-shuishi_16.jpg?1727313152");
     background-size: 100% 100%;
     background-repeat: no-repeat;
     position: relative;
