--- a/Lab-10_UI-Responsive-Webpage-Design/desert_page.css
+++ b/Lab-10_UI-Responsive-Webpage-Design/desert_page.css
@@ -60,7 +60,7 @@ section.exc8_HeroSection {
     background-image: url("https://images.adsttc.com/media/images/66f4/b4f0/2684/7b18/b6f9/24c9/large_jpg/zhongwei-desert-diamond-hotel-shuishi_16.jpg?1727313152");
     background-size: 100%;
     background-repeat: no-repeat;
-    position: absolute;
+    position: center;
     width: 97%;
     height: 95%;
     display: flex;
@@ -72,7 +72,7 @@ a.hide_this_csharp {
 }
 
 .text_INFO_1 {
-   position: absolute;
+   position: relative;
     top: 5%;
     bottom: 90%;
     left: 20%;
@@ -83,7 +83,7 @@ a.hide_this_csharp {
     padding: 0.5em;
 }
 
-.nav {
+div#nav {
     width: auto;
     height: auto;
     color: aliceblue;
@@ -91,8 +91,8 @@ a.hide_this_csharp {
     text-align: center;
     background-color: #F1D4A9;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: center;
+    align-items: bottom;
     border-radius: 1px;
 }
 
