--- a/Lab-7/index.css
+++ b/Lab-7/index.css
@@ -14,7 +14,7 @@ html { background-color: #F9F9F9; }
     width: 1000px;
     height: 140px;
     margin: auto;
-    box-shadow: -10px 10px 5px #89C9A9 inset;
+    box-shadow: -10px 10px 5px #F1D4A9 inset;
     background-color: #F9F9F9;
     padding: 1em;
     text-align: center;
@@ -38,7 +38,7 @@ div.headerimage
     font-size: x-large;
     font-stretch: normal;
     text-align: center;
-    color: #89C9A9;
+    color: #F1D4A9;
     float: right;
 }
 
@@ -49,7 +49,7 @@ div.headerimage
     color: aliceblue;
     padding: 1em;
     text-align: center;
-    background-color: #89C9A9;
+    background-color: #F1D4A9;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -58,7 +58,7 @@ div.headerimage
 
 ul.flexNav
 {
-    background-color: #89C9A9; text-align: center;
+    background-color: #F1D4A9; text-align: center;
 }
 
 a.flexNav {
@@ -111,7 +111,7 @@ a.flexNav:hover {
     padding: auto;
     margin: 3em;
     justify-content: left;
-    color: #89C9A9;
+    color: #F1D4A9;
  }
 
 p { text-align: justify; padding: auto; }
@@ -151,7 +151,7 @@ height: 95%;
 }
 
 div.cardinfo:hover {
-    background-color: #89C9A9;
+    background-color: #F1D4A9;
     box-shadow: 0px 0px 6px 2px black;
     border-radius: 5px;
     transform: scale(1.01);
@@ -172,7 +172,7 @@ img.nvrlnd {
     display: block;
 }
 
-h2.linkFont { font: monospace; color: #89C9A9; }
+h2.linkFont { font: monospace; color: #F1D4A9; }
 
 .images {
     height:200px;
