--- a/Project-1/index.css
+++ b/Project-1/index.css
@@ -1,32 +1,195 @@
 /* Project 1 - Theme */
-html { background-color: #F1D4A9; }
+/* browser zoom */
+@media only screen and ( max-width 1450px )
+{
+    section.card { width: 100%; height: auto; }
+    img.headerimage { height: auto; }
+    img.nvrlnd { height: auto; }
+    img.nvrlnd { height: auto; }
+    img.nvrlnd { height: auto; }
+}
+
+html { background-color: #F9F9F9; }
 
 .header {
+    width: 1000px;
+    height: 140px;
+    margin: auto;
+    box-shadow: -10px 10px 5px #F1D4A9 inset;
+    background-color: #F9F9F9;
+    padding: 1em;
+    text-align: center;
+    clear: both;
+}
+
+div.headerimage
+{
+    width: 300px; height: auto; float: left;
+}
+
+.headerimage
+{  
     width: 100%;
-    position: absolute;
-    border: 2px 2px gray;
+    height: 100%;
 }
 
-.header_image { url("https://images.adsttc.com/media/images/66f4/b4f0/2684/7b18/b6f9/24c9/large_jpg/zhongwei-desert-diamond-hotel-shuishi_16.jpg?1727313152");
-    background-size: 100%;
-    background-repeat: no-repeat;
-    position: center;
-    width: 97%;
-    height: 95%;
-    display: flex;
-    border: 10px 10px 5px ridge black;
-}
- 
-div.bgHeader {
-    width: auto;
-    border: 2px 2px gray;
-}
 .headertitle {
+    width: 700px;
+    font-family: "Times";
+    font-size: x-large;
+    font-stretch: normal;
+    text-align: center;
+    color: #F1D4A9;
+    float: right;
+}
 
-    border: 2px 2px gray;
+.nav {
+    width: 1000px;
+    height: 25px;
+    margin: auto;
+    color: aliceblue;
+    padding: 1em;
+    text-align: center;
+    background-color: #F1D4A9;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    border-radius: 1px;
+}
+
+ul.flexNav
+{
+    background-color: #F1D4A9; text-align: center;
+}
+
+a.flexNav {
+    color: #F9F9F9;
+    text-decoration: none;
+}
+
+a.flexNav:hover {
+    background-color: #C6D7CE;
+    box-shadow: 0px 0px 6px 2px lightgray;
+    transform: scale(.25);
+    font-size: 1.05em;
+    text-decoration: none;
 }
 
 .maincontainer {
+    width: 1000px;
+    margin: 2em auto;
+    height: 350px;
+}
+
+.leftblock {
+    width: 295px;
+    height: 300px;
+    float: left;
+}
+
+.introImage
+{
     width: 100%;
-    border: 2px 2px gray;
+    height: 100%;
+    padding: .1em;
+    border-radius: 3px;
+    box-shadow: -10px 10px 5px #5E3F9F;
+}
+
+.rightblock {
+    width: 650px;
+    height: 300px;
+    float: right;
+}
+
+.infosection {
+    height: 300px;
+}
+
+.sectionTitle {
+    display: flex;
+    text-align: justify;
+    padding: auto;
+    margin: 3em;
+    justify-content: left;
+    color: #F1D4A9;
+ }
+
+p { text-align: justify; padding: auto; }
+p.msg
+{
+    font-family: "Times"; font-size: large; text-indent: 1em;
+    font-stretch: normal; color: #5E3F9F;
+}
+
+em#parag { justify: top;font-weight: bolder; color: #5E3F9F; font-size: 175%; }
+
+
+.cardscontainer {
+    width: 1000px;
+    height: 300px;
+    margin: 2em auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    clear: both;
+}
+
+p.sectionTitle { display: flex; text-align: left; padding: auto; }
+
+section.card {
+    width: 300px;
+    height: 270px;
+    box-shadow: 1px -1px 1px #5E3F9F;
+    border-radius: 5px;
+    margin: 1em;
+}
+
+div.cardinfo {
+background-color: #F9F9F9;
+padding: 1em;
+height: 95%;
+}
+
+div.cardinfo:hover {
+    background-color: #F1D4A9;
+    box-shadow: 0px 0px 6px 2px black;
+    border-radius: 5px;
+    transform: scale(1.01);
+    font-size: 1.05em;
+    text-decoration: none;
+}
+
+a.cardlink {
+    display: inline-block;
+    background-color: #F9F9F9; color: black;
+    padding: 0.5em; width: 95%; text-align: center;
+    text-decoration: none;
+}
+
+img.nvrlnd {
+    width: 100%;
+    height: 40%;
+    display: block;
+}
+
+h2.linkFont { font: monospace; color: #F1D4A9; }
+
+.images {
+    height:200px;
+    background-color: crimson;
+    float: left;
+    width: 100%;
+}
+
+.footer {
+    width: 1000px; margin: 1em auto; box-shadow: 5px 5px 5px lightgray;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 20px;
+    font-size: x-small;
+    text-align: center; 
+    height: 25px;
+    background-color: whitesmoke;
+    border-radius: 2px;
 }
