--- a/Project-1/index.css
+++ b/Project-1/index.css
@@ -1,5 +1,4 @@
 /* Project 1 - Theme */
-/* browser zoom */
 @media only screen and ( max-width 1450px )
 {
     section.card { width: 100%; height: auto; }
@@ -12,19 +11,26 @@
 html { background-color: #F9F9F9; }
 
 .header {
-    width: 1000px;
+    width: 90%;;
     height: 140px;
     margin: auto;
     box-shadow: -10px 10px 5px #F1D4A9 inset;
     background-color: #F9F9F9;
     padding: 1em;
     text-align: center;
-    clear: both;
+    position: absolute;
+}
+
+section.bgImage {
+
 }
 
 div.headerimage
-{
-    width: 300px; height: auto; float: left;
+{   background-image: url("https://images.adsttc.com/media/images/66f4/b4f0/2684/7b18/b6f9/24c9/large_jpg/zhongwei-desert-diamond-hotel-shuishi_16.jpg?1727313152");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    position: absolute;
+    height: auto;
 }
 
 .headerimage
@@ -40,11 +46,11 @@ div.headerimage
     font-stretch: normal;
     text-align: center;
     color: #F1D4A9;
-    float: right;
+    position: relative;
 }
 
 .nav {
-    width: 1000px;
+    width: 92%;
     height: 25px;
     margin: auto;
     color: aliceblue;
@@ -68,7 +74,7 @@ a.flexNav {
 }
 
 a.flexNav:hover {
-    background-color: #C6D7CE;
+    background-color: black;
     box-shadow: 0px 0px 6px 2px lightgray;
     transform: scale(.25);
     font-size: 1.05em;
@@ -76,14 +82,14 @@ a.flexNav:hover {
 }
 
 .maincontainer {
-    width: 1000px;
+    width: 100%;
     margin: 2em auto;
-    height: 350px;
+    height: 650px;
 }
 
 .leftblock {
-    width: 295px;
-    height: 300px;
+    width: 495px;
+    height: 550px;
     float: left;
 }
 
@@ -93,7 +99,7 @@ a.flexNav:hover {
     height: 100%;
     padding: .1em;
     border-radius: 3px;
-    box-shadow: -10px 10px 5px #5E3F9F;
+    box-shadow: -10px 10px 5px black;
 }
 
 .rightblock {
@@ -103,7 +109,7 @@ a.flexNav:hover {
 }
 
 .infosection {
-    height: 300px;
+    height: 90%;
 }
 
 .sectionTitle {
@@ -119,10 +125,10 @@ p { text-align: justify; padding: auto; }
 p.msg
 {
     font-family: "Times"; font-size: large; text-indent: 1em;
-    font-stretch: normal; color: #5E3F9F;
+    font-stretch: normal; color: black;
 }
 
-em#parag { justify: top;font-weight: bolder; color: #5E3F9F; font-size: 175%; }
+em#parag { justify: top;font-weight: bolder; color: black; font-size: 175%; }
 
 
 .cardscontainer {
@@ -138,9 +144,9 @@ em#parag { justify: top;font-weight: bolder; color: #5E3F9F; font-size: 175%; }
 p.sectionTitle { display: flex; text-align: left; padding: auto; }
 
 section.card {
-    width: 300px;
-    height: 270px;
-    box-shadow: 1px -1px 1px #5E3F9F;
+    width: 500px;
+    height: 370px;
+    box-shadow: 1px -1px 1px black;
     border-radius: 5px;
     margin: 1em;
 }
@@ -183,7 +189,7 @@ h2.linkFont { font: monospace; color: #F1D4A9; }
 }
 
 .footer {
-    width: 1000px; margin: 1em auto; box-shadow: 5px 5px 5px lightgray;
+    width: 100%; margin: 1em auto; box-shadow: 5px 5px 5px lightgray;
     display: flex;
     justify-content: space-evenly;
     padding: 20px;
