--- a/Lab-10_UI-Responsive-Webpage-Design/desert_page.css
+++ b/Lab-10_UI-Responsive-Webpage-Design/desert_page.css
@@ -1,11 +1,45 @@
-/* @media only screen and ( max-width 1450px )
+* { box-sizing: border-box; }
+
+/* SCREEN SIZE */
+/* Larger than 1700px */
+@media only screen and ( max-width: 1700px )
 {
-    section.card { width: 100%; height: auto; }
-    img.headerimage { height: auto; }
-    img.nvrlnd { height: auto; }
-    img.nvrlnd { height: auto; }
-    img.nvrlnd { height: auto; }
-} */
+    .card {
+        width: 90%;
+	align-items: center;
+        background-color: lightcoral;
+     }
+    .cardtitle { text-align: center; }
+    .link {
+        padding: 1em 2em;
+	font-size: 1.1em;
+    }
+    .headertitle { font-size: 1.2em; }
+}
+/* ======Break===Point====================================================*/
+
+/* medium screen size [ 800px > 1700px] */
+@media only screen and ( max-width: 1052px )
+{
+    .card { background-color: aquamarine; width: 30%; }
+    .cardtitle { text-align: center; }
+    .headertitle {
+        width: 90%; padding: 1em; font-size: 3em; text-align: center; }
+    .header { flex-wrap: wrap; }
+    .flexNav { width: 100%; justify-content: center; }
+}
+/* ==========================================================================*/
+
+/* mobile screen size  800px */
+@media only screen and ( max-width: 800px ) {
+    .header { flex-wrap: wrap; }
+    .headertitle { width: 100%; padding: 1em; font-size: 3em; }
+    .card{ background-color: lightskyblue; margin-bottom: 2em; width: 90%; }
+    .cardtitle { text-align: center; }
+    .navlinks { width: 100%; justify-content: center; border: top white; }
+    .footer { flex-wrap: wrap; }
+}
+/* ==========================================================================*/
 
 body { page-size: landscape; }
 
@@ -51,11 +85,12 @@ body { page-size: landscape; }
 section.exc8_HeroSection {
     width: fill;
     height: 95%;
+    margin: -1em;
     border: solid 1px red;
 }
 
 .excImage1 {
-    background-image: url("https://images.adsttc.com/media/images/66f4/b4f0/2684/7b18/b6f9/24c9/large_jpg/zhongwei-desert-diamond-hotel-shuishi_16.jpg?1727313152");
+    background-image: linear-gradient( to right, rgba(135,39 ,255, 0.6 ), rgba(25,25,5, 0.6 )), url("https://images.adsttc.com/media/images/66f4/b4f0/2684/7b18/b6f9/24c9/large_jpg/zhongwei-desert-diamond-hotel-shuishi_16.jpg?1727313152");
     background-size: 100%;
     background-repeat: no-repeat;
     position: center;
@@ -63,10 +98,6 @@ section.exc8_HeroSection {
     height: 98%;
     display: flex;
     border: solid 1px purple;
-}
-
-a.hide_this_csharp {
-    position: absolute;
 }
 
 .text_INFO_1 {
@@ -77,7 +108,6 @@ a.hide_this_csharp {
     right: 20;
     background-color: rgba( 240, 80, 30, 0.7 );
     text-align: center;
-    border: 10px, 10px, 5px, ridge black;
     padding: 0.5em;
 }
 
@@ -113,9 +143,10 @@ a.flexNav:hover {
 }
 
 .maincontainer {
-    width: 1000px;
+    width: 100%;
     margin: 2em auto;
     height: 350px;
+    border: solid 1px blue;
 }
 
 .leftblock {
@@ -219,6 +250,7 @@ h2.linkFont { font: monospace; color: #F1D4A9; }
     width: 100%;
 }
 
+/* FOOTER */
 .footer {
     width: 1000px; margin: 1em auto; box-shadow: 5px 5px 5px lightgray;
     display: flex;
@@ -229,4 +261,40 @@ h2.linkFont { font: monospace; color: #F1D4A9; }
     height: 25px;
     background-color: whitesmoke;
     border-radius: 2px;
+}
+
+.footercustomer, .footerfollow, .footermyaccount {
+    width: 30%;
+    padding: 0em 1em;
+    margin-left: -40px;
+    text-align: left;
+}
+
+.footerlist li{
+    margin-left: -40px;
+    list-style: none;
+    text-align: left;
+    padding: 0.5em 0em;
+}
+
+.footertitle {
+    text-align: left;
+    font-weight: bolder;
+    font-size: 1.2em;
+}
+
+.socialmedia {
+    display: flex;
+}
+
+.socialmedia a{
+    display: inline-block;
+    width: 10%;
+    margin-right: 5%;
+}
+
+/* selector with img element specificity */
+img.socialmedia {
+    width: 100%;
+    display: block;
 }
