--- a/Lab-10_UI-Responsive-Webpage-Design/desert_page.css
+++ b/Lab-10_UI-Responsive-Webpage-Design/desert_page.css
@@ -1,4 +1,5 @@
 * { box-sizing: border-box; }
+body { page-size: landscape; }
 
 /* SCREEN SIZE */
 /* Larger than 1700px */
@@ -41,7 +42,6 @@
 }
 /* ==========================================================================*/
 
-body { page-size: landscape; }
 
 .header {
     width: 100%;
@@ -76,17 +76,12 @@ body { page-size: landscape; }
     width: fill;
     display: flex;
     width: 100%;
-    justify: 
-    left: 0%;
-    right: 0%;
-    border: solid 1px blue;
 }
 
 section.exc8_HeroSection {
     width: fill;
     height: 95%;
-    margin: -1em;
-    border: solid 1px red;
+    margin: -.50em;
 }
 
 .excImage1 {
@@ -97,7 +92,6 @@ section.exc8_HeroSection {
     width: 100%;
     height: 98%;
     display: flex;
-    border: solid 1px purple;
 }
 
 .text_INFO_1 {
@@ -250,15 +244,21 @@ h2.linkFont { font: monospace; color: #F1D4A9; }
     width: 100%;
 }
 
+.footerContainer {
+    width: fill;
+    height: 60%
+    border: solid 1px blue;
+}
 /* FOOTER */
-.footer {
-    width: 1000px; margin: 1em auto; box-shadow: 5px 5px 5px lightgray;
+footer {
+    width: fill;
+    height: auto;
+    margin: 1em auto; box-shadow: 5px 5px 5px lightgray;
     display: flex;
     justify-content: space-evenly;
     padding: 20px;
     font-size: x-small;
     text-align: center; 
-    height: 25px;
     background-color: whitesmoke;
     border-radius: 2px;
 }
