--- a/Project-1/index.css
+++ b/Project-1/index.css
@@ -1,67 +1,126 @@
-/* Project 1 - Theme */
-@media only screen and ( max-width 1450px )
-{
-    section.card { width: 100%; height: auto; }
-    img.headerimage { height: auto; }
-    img.nvrlnd { height: auto; }
-    img.nvrlnd { height: auto; }
-    img.nvrlnd { height: auto; }
-}
+* { box-sizing: border-box; /*border: solid 1px blue; */ }
+body { page-size: landscape; }
 
-html { background-color: #F9F9F9; }
+/* SCREEN SIZE */
+/* Larger than 1700px */
+@media only screen and ( max-width: 1700px )
+{
+    .card {
+        width: 90%;
+	align-items: center;
+        background-color: lightcoral;
+     }
+    .cardtitle { text-align: center; }
+    .link {
+        padding: 1em 2em;
+	font-size: 1.1em;
+    }
+    .headertitle { font-size: 1.2em; }
+}
+/* ======Break===Point====================================================*/
+
+/* medium screen size [ 800px > 1700px] */
+@media only screen and ( max-width: 1052px )
+{
+    .card { background-color: aquamarine; width: 30%; }
+    .cardtitle { text-align: center; }
+    .headertitle {
+        width: 90%; padding: 1em; font-size: 3em; text-align: center; }
+    .header { flex-wrap: wrap; }
+    .flexNav { width: 100%; justify-content: center; }
+}
+/* ==========================================================================*/
+
+/* mobile screen size  800px */
+@media only screen and ( max-width: 800px ) {
+    .header { flex-wrap: wrap; }
+    .headertitle { width: 100%; padding: 1em; font-size: 3em; }
+    .card{ background-color: lightskyblue; margin-bottom: 2em; width: 90%; }
+    .cardtitle { text-align: center; }
+    .navlinks { width: 100%; justify-content: center; border: top white; }
+    .footer { flex-wrap: wrap; }
+}
+/* ==========================================================================*/
+
 
 .header {
-    width: 90%;;
-    height: 140px;
-    margin: auto;
-    box-shadow: -10px 10px 5px #F1D4A9 inset;
-    background-color: #F9F9F9;
-    padding: 1em;
+    width: 100%;
+    height: 300px;
     text-align: center;
-    position: absolute;
+    clear: both;
 }
 
-section.bgImage {
-
+/*div.headerimage*/
+{
+    width: 300px; height: auto; float: left;
 }
 
-div.headerimage
-{   background-image: url("https://images.adsttc.com/media/images/66f4/b4f0/2684/7b18/b6f9/24c9/large_jpg/zhongwei-desert-diamond-hotel-shuishi_16.jpg?1727313152");
-    background-size: 100%;
-    background-repeat: no-repeat;
-    position: absolute;
-    height: auto;
-}
-
-.headerimage
+/*.headerimage*/
 {  
     width: 100%;
     height: 100%;
 }
 
-.headertitle {
-    width: 700px;
-		font-family: Serif;
-		font-style: normal;
-		font-weight: 500;
-		src:
-			url("//cdn2.editmysite.com/fonts/SQ_Market/sqmarket-medium.woff2") format("woff2"),
-			url("//cdn2.editmysite.com/fonts/SQ_Market/sqmarket-medium.woff") format("woff");
-	}
+/*.headertitle {
+    position: absolute;
+    width: 300px;
+    font-family: "Times";
+    font-size: x-large;
+    font-stretch: normal;
+    text-align: center;
+    color: #F1D4A9;
+    float: right;
+}*/
 
-.nav {
-    width: 92%;
-    height: 25px;
-    margin: auto;
+.imgcontainerv2 {
+    width: fill;
+    display: flex;
+    width: 100%;
+}
+
+section.exc8_HeroSection {
+    width: fill;
+    height: 95%;
+    margin: -.50em;
+}
+
+.excImage1 {
+    background-image: linear-gradient( to top right, rgba(69, 48, 43, 1), rgba(69, 48, 43, 0.01)), url("https://images.adsttc.com/media/images/66f4/b4f0/2684/7b18/b6f9/24c9/large_jpg/zhongwei-desert-diamond-hotel-shuishi_16.jpg?1727313152");
+    background-size: 100%;
+    background-repeat: no-repeat;
+    position: center;
+    width: 100%;
+    height: 98%;
+    display: flex;
+}
+
+.text_INFO_1 {
+   position: relative;
+    top: 5%;
+    bottom: 90%;
+    left: 20%;
+    right: 20;
+    background-color: rgba( 240, 80, 30, 0.7 );
+    text-align: center;
+    padding: 0.5em;
+}
+
+.navbar {
+    height: 8%;
     color: aliceblue;
-    padding: 1em;
     text-align: center;
     background-color: #F1D4A9;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     border-radius: 1px;
-    border 3px 3px 3px grey;
+
+    position: fixed;
+    top: 0%;
+    left: 0%;
+    margin: 0%;
+    width: 100%;
+    border: solid 1px red;
 }
 
 ul.flexNav
@@ -72,11 +131,10 @@ ul.flexNav
 a.flexNav {
     color: #F9F9F9;
     text-decoration: none;
-    border 3px 3px 3px grey;
 }
 
 a.flexNav:hover {
-    background-color: black;
+    background-color: #C6D7CE;
     box-shadow: 0px 0px 6px 2px lightgray;
     transform: scale(.25);
     font-size: 1.05em;
@@ -86,15 +144,15 @@ a.flexNav:hover {
 .maincontainer {
     width: 100%;
     margin: 2em auto;
-    height: 650px;
-    border 3px 3px 3px grey;
+    margin-bottom: 40%;
+    height: auto;
+    border: solid 1px blue;
 }
 
 .leftblock {
-    width: 495px;
-    height: 550px;
+    width: 295px;
+    height: 300px;
     float: left;
-    border 3px 3px 3px grey;
 }
 
 .introImage
@@ -103,19 +161,67 @@ a.flexNav:hover {
     height: 100%;
     padding: .1em;
     border-radius: 3px;
-    box-shadow: -10px 10px 5px black;
+    box-shadow: -10px 10px 5px #5E3F9F;
 }
 
+.introImage1
+{
+    width: 100%;
+    height: 100%;
+    padding: .1em;
+    border-radius: 3px;
+    box-shadow: -10px 10px 5px #5E3F9F;
+}
+
+.leftblock1 {
+    width: 35%;
+    height: 45%;
+    float: left;
+}
 .rightblock {
-    width: 650%;
+    width: 650px;
     height: 300px;
     float: right;
-    border 3px 3px 3px grey;
+}
+
+.rightblock1 {
+    width: 45%;
+    height: 400px;
+    float: right;
 }
 
 .infosection {
-    height: 90%;
-    border 3px 3px 3px grey;
+    height: 300px;
+}
+
+.infosection1 {
+}
+
+.heroinfo {
+    background-color: rgba(69, 48, 43, .9); 
+    position: relative;
+    top:10%;
+    bottom: 30%;
+    left: -30%;
+    right: 0%;
+    text-align: center;
+    border: solid 1px red;
+}
+
+.heroinfo a:hover {
+    background-color: orange;
+}
+
+.herotext {
+    display: block;
+    padding: 10px 25px;
+    color: black;
+
+    font-weight: 600;
+    font-size: 20px;
+    text-align: center;
+    border-radius: 10px;
+    text-decoration: none;
 }
 
 .sectionTitle {
@@ -131,10 +237,10 @@ p { text-align: justify; padding: auto; }
 p.msg
 {
     font-family: "Times"; font-size: large; text-indent: 1em;
-    font-stretch: normal; color: black;
-}
+    font-stretch: normal; color: black; border: solid 2px blue;
+	 position: relative; left: -30%; top: -10%; }
 
-em#parag { justify: top;font-weight: bolder; color: black; font-size: 175%; }
+em#parag { justify: top;font-weight: bolder; color: #5E3F9F; font-size: 175%; }
 
 
 .cardscontainer {
@@ -150,9 +256,9 @@ em#parag { justify: top;font-weight: bolder; color: black; font-size: 175%; }
 p.sectionTitle { display: flex; text-align: left; padding: auto; }
 
 section.card {
-    width: 500px;
-    height: 370px;
-    box-shadow: 1px -1px 1px black;
+    width: 300px;
+    height: 270px;
+    box-shadow: 1px -1px 1px #5E3F9F;
     border-radius: 5px;
     margin: 1em;
 }
@@ -185,23 +291,58 @@ img.nvrlnd {
     display: block;
 }
 
-h2.linkFont { font: monospace; color: #F1D4A9; }
+h2.linkFont { font: monospace; color: #F1D4A9; position: relative; top: -5%; left: 10%; }
 
-.images {
-    height:200px;
-    background-color: crimson;
-    float: left;
+.footercontainer {
+    top: 0%;
+    left: 0%;
+    margin: 0%;
     width: 100%;
 }
 
-.footer {
-    width: 100%; margin: 1em auto; box-shadow: 5px 5px 5px lightgray;
+/* FOOTER */
+footer {
+    width: ;
+    height: fill;
     display: flex;
     justify-content: space-evenly;
-    padding: 20px;
     font-size: x-small;
     text-align: center; 
-    height: 25px;
     background-color: whitesmoke;
     border-radius: 2px;
+}
+
+.footercustomer, .footerfollow, .footermyaccount {
+    width: 30%;
+    padding: 0em 1em;
+    text-align: left;
+}
+
+.footerlist li{
+    margin-left: -40px;
+    list-style: none;
+    text-align: left;
+    padding: 0.5em 0em;
+}
+
+.footertitle {
+    text-align: left;
+    font-weight: bolder;
+    font-size: 1.2em;
+}
+
+.socialmedia {
+    display: flex;
+}
+
+.socialmedia a{
+    display: inline-block;
+    width: 10%;
+    margin-right: 5%;
+}
+
+/* selector with img element specificity */
+img.socialmedia {
+    width: 100%;
+    display: block;
 }
