--- a/Project-1/index.css
+++ b/Project-1/index.css
@@ -120,7 +120,6 @@ section.exc8_HeroSection {
     left: 0%;
     margin: 0%;
     width: 100%;
-    border: solid 1px red;
 }
 
 ul.flexNav
@@ -143,10 +142,10 @@ a.flexNav:hover {
 
 .maincontainer {
     width: 100%;
-    margin: 2em auto;
+    margin: 2em .5em;
     margin-bottom: 40%;
     height: auto;
-    border: solid 1px blue;
+    border: solid 1px grey;
 }
 
 .leftblock {
