--- a/Project-1/index.css
+++ b/Project-1/index.css
@@ -38,10 +38,10 @@ body { page-size: landscape; }
     .card{ background-color: lightskyblue; margin-bottom: 2em; width: 90%; }
     .cardtitle { text-align: center; }
     .navlinks { width: 100%; justify-content: center; border: top white; }
-    .footer { flex-wrap: wrap; }
+
+
 }
 /* ==========================================================================*/
-
 
 .header {
     width: 100%;
@@ -50,29 +50,7 @@ body { page-size: landscape; }
     clear: both;
 }
 
-/*div.headerimage*/
-{
-    width: 300px; height: auto; float: left;
-}
-
-/*.headerimage*/
-{  
-    width: 100%;
-    height: 100%;
-}
-
-/*.headertitle {
-    position: absolute;
-    width: 300px;
-    font-family: "Times";
-    font-size: x-large;
-    font-stretch: normal;
-    text-align: center;
-    color: #F1D4A9;
-    float: right;
-}*/
-
-.imgcontainerv2 {
+.headercontainer {
     width: fill;
     display: flex;
     width: 100%;
@@ -84,7 +62,7 @@ section.exc8_HeroSection {
     margin: -.50em;
 }
 
-.excImage1 {
+.headerimage {
     background-image: linear-gradient( to top right, rgba(69, 48, 43, 1), rgba(69, 48, 43, 0.01)), url("https://images.adsttc.com/media/images/66f4/b4f0/2684/7b18/b6f9/24c9/large_jpg/zhongwei-desert-diamond-hotel-shuishi_16.jpg?1727313152");
     background-size: 100%;
     background-repeat: no-repeat;
@@ -94,49 +72,35 @@ section.exc8_HeroSection {
     display: flex;
 }
 
-.text_INFO_1 {
-   position: relative;
-    top: 5%;
-    bottom: 90%;
-    left: 20%;
-    right: 20;
-    background-color: rgba( 240, 80, 30, 0.7 );
-    text-align: center;
-    padding: 0.5em;
-}
-
 .navbar {
-    height: 8%;
-    color: aliceblue;
+    height: auto;
     text-align: center;
-    background-color: rgba(69, 48, 43, .9); 
+    background-color: rgba(69, 48, 43); 
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    border-radius: 1px;
-
+    justify-content: center;
     position: fixed;
     top: 0%;
+    right: 20%;
     left: 0%;
-    margin: 0%;
+    margin-right: 10%;
     width: 100%;
 }
 
 ul.flexNav
 {
-    text-align: center; margin: 1px;
-    background-color: rgba(69, 48, 43, .9); 
+    text-align: center;
 }
 
 a.flexNav {
     color: #F9F9F9;
+    padding: 15px 80px;
     text-decoration: none;
 }
 
 a.flexNav:hover {
-    background-color: rgba(69, 48, 43, .9); 
-    transform: scale(.25);
-    font-size: 1.05em;
+    background-color: rgba(69, 38, 33, .9); 
+    transform: scale(1.01);
+    font-size: 1.01em;
     text-decoration: none;
 }
 
@@ -145,22 +109,24 @@ a.flexNav:hover {
     margin: 2em .5em;
     margin-bottom: 40%;
     height: auto;
+    border: solid 1px orange;
+}
+
+.samplecontainer {
+    width: 100%;
+    height: auto;
+    display: flex;
+    margin-bottom: 10%;
     border: solid 1px grey;
+    clear: both;
 }
 
-.leftblock {
-    width: 295px;
-    height: 300px;
-    float: left;
-}
-
-.introImage
+.sampleImage
 {
     width: 100%;
     height: 100%;
-    padding: .1em;
+    padding: .01em;
     border-radius: 3px;
-    box-shadow: -10px 10px 5px #5E3F9F;
 }
 
 .introImage1
@@ -174,31 +140,39 @@ a.flexNav:hover {
 
 .leftblock1 {
     width: 35%;
-    height: 45%;
+    height: 100%;
     float: left;
-}
-.rightblock {
-    width: 650px;
-    height: 300px;
-    float: right;
 }
 
 .rightblock1 {
-    width: 45%;
-    height: 400px;
+    width: 60%;
+    height: 100%;
     float: right;
 }
 
-.infosection {
-    height: 300px;
+.imageblock {
+    width: 100%;
+    border: solid 1px blue;
+    align-items: flex-start;
+    float: right;
+}
+
+.textblock {
+    width: 100%;
+    height: 100%;
+    background-color: orange;
+    float: left;
 }
 
 .infosection1 {
+    width: 92%;
+    border: solid 1px blue;
+    justify: bottom;
+    text-align: justify;
 }
 
 .heroinfo {
     background-color: rgba(69, 48, 43, .9); 
-    position: relative;
     top:10%;
     bottom: 30%;
     left: -30%;
@@ -208,13 +182,13 @@ a.flexNav:hover {
 }
 
 .heroinfo a:hover {
-    background-color: orange;
+    background: rgba(69, 48, 43, .50);
 }
 
 .herotext {
     display: block;
     padding: 10px 25px;
-    color: black;
+    color: #F9F9F9;
 
     font-weight: 600;
     font-size: 20px;
@@ -230,67 +204,20 @@ a.flexNav:hover {
     margin: 3em;
     justify-content: left;
     color: #F1D4A9;
- }
+}
 
 p { text-align: justify; padding: auto; }
+
 p.msg
 {
     font-family: "Times"; font-size: large; text-indent: 1em;
     font-stretch: normal; color: black;
-	 position: relative; left: -30%; top: -10%; }
+	 position: static ; left: -30%; top: -10%; bottom: 10%; }
 
-em#parag { justify: top;font-weight: bolder; color: #5E3F9F; font-size: 175%; }
+em#parag { justify: top;font-weight: bolder; color: black; font-size: 175%; }
 
 
-.cardscontainer {
-    width: 1000px;
-    height: 300px;
-    margin: 2em auto;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    clear: both;
-}
-
-p.sectionTitle { display: flex; text-align: left; padding: auto; }
-
-section.card {
-    width: 300px;
-    height: 270px;
-    box-shadow: 1px -1px 1px #5E3F9F;
-    border-radius: 5px;
-    margin: 1em;
-}
-
-div.cardinfo {
-background-color: #F9F9F9;
-padding: 1em;
-height: 95%;
-}
-
-div.cardinfo:hover {
-    background-color: #F1D4A9;
-    box-shadow: 0px 0px 6px 2px black;
-    border-radius: 5px;
-    transform: scale(1.01);
-    font-size: 1.05em;
-    text-decoration: none;
-}
-
-a.cardlink {
-    display: inline-block;
-    background-color: #F9F9F9; color: black;
-    padding: 0.5em; width: 95%; text-align: center;
-    text-decoration: none;
-}
-
-img.nvrlnd {
-    width: 100%;
-    height: 40%;
-    display: block;
-}
-
-h2.linkFont { font: monospace; color: #F1D4A9; position: relative; top: -5%; left: 0%; }
+h2.linkFont { font: monospace; color: #F1D4A9; position: static; top: -5%; left: 0%; }
 
 .footercontainer {
     top: 0%;
@@ -301,14 +228,26 @@ h2.linkFont { font: monospace; color: #F1D4A9; position: relative; top: -5%; lef
 
 /* FOOTER */
 footer {
-    width: ;
-    height: fill;
+    width: 100% ;
+    height: auto;
+    margin-bottom: -1%;
     display: flex;
     justify-content: space-evenly;
     font-size: x-small;
     text-align: center; 
-    background-color: whitesmoke;
+    background-color: lightgray;
     border-radius: 2px;
+}
+
+.images {
+    width: 100%;
+    margin: black 10%;
+}
+
+.slides {
+    width: 100%;
+    border: solid 1px blue;
+    text-shadow: 0px 10px 20px #023141;
 }
 
 .footercustomer, .footerfollow, .footermyaccount {
