--- a/Lab-7_Fixed-layout_Website/index.css
+++ b/Lab-7_Fixed-layout_Website/index.css
@@ -14,7 +14,7 @@ html { background-color: #F9F9F9; }
     width: 1000px;
     height: 140px;
     margin: auto;
-    box-shadow: -10px 10px 5px #5E3F9F inset;
+    box-shadow: -10px 10px 5px #89C9A9 inset;
     background-color: #;
     padding: 1em;
     text-align: center;
@@ -38,7 +38,7 @@ div.headerimage
     font-size: x-large;
     font-stretch: normal;
     text-align: center;
-    color: #5E3F9F;
+    color: #89C9A9;
     float: right;
 }
 
@@ -49,7 +49,7 @@ div.headerimage
     color: aliceblue;
     padding: 1em;
     text-align: center;
-    background-color: #5E3F9F;
+    background-color: #89C9A9;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -58,7 +58,7 @@ div.headerimage
 
 ul.flexNav
 {
-    background-color: #5E3F9F; text-align: center;
+    background-color: #89C9A9; text-align: center;
 }
 
 a.flexNav {
@@ -139,15 +139,18 @@ p.sectionTitle { display: flex; text-align: left; padding: auto; }
 section.card {
     width: 300px;
     height: 270px;
-    box-shadow: 1px -1px 1px #5E3F9F;
+    box-shadow: 1px -1px 1px #89C9A9;
     border-radius: 5px;
     margin: 1em;
+    border: solid 1px red;
 }
 
 div.cardinfo {
-background-color: #5E3F9F;
+background-color: #89C9A9;
 padding: 1em;
+margin: -2px;
 height: 95%;
+border-radius: 5px;
 }
 
 div.cardinfo:hover {
@@ -172,7 +175,7 @@ img.nvrlnd {
     display: block;
 }
 
-h2.linkFont { font: monospace; color: #5E3F9F; }
+h2.linkFont { font: monospace; color: #89C9A9; }
 
 .images {
     height:200px;
