--- a/Project-2/Project-2.css
+++ b/Project-2/Project-2.css
@@ -76,7 +76,7 @@ section.exc8_HeroSection {
 }
 
 .headerimage {
-    background-image: linear-gradient( to top right, rgba(69, 48, 43, 1), rgba(69, 48, 43, 0.01)), url("https://auto123channel.com/wp-content/uploads/2023/03/girard-perregaux-laureato-green-ceramic-aston-martin-edition.jpg");
+    background-image: linear-gradient( to top right, rgba(92,110,110, 1), rgba(165,183,159, 0.01)), url("https://auto123channel.com/wp-content/uploads/2023/03/girard-perregaux-laureato-green-ceramic-aston-martin-edition.jpg");
     background-size: 100%;
     background-repeat: no-repeat;
     position: center;
